Get venue stats, update url with active tab in admin pages

--- a/ODK.Website.Angular/src/app/modules/admin/components/venues/venue/venue.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/venues/venue/venue.component.html
@@ -2,10 +2,15 @@
   <h2>{{venue.name}}</h2>
 
   <ngb-tabset type="pills">
-      <ngb-tab title="Edit">
-          <ng-template ngbTabContent>
-              <app-edit-venue [chapter]="chapter" [venue]="venue"></app-edit-venue>
-          </ng-template>
-      </ngb-tab>
+    <ngb-tab title="Edit">
+      <ng-template ngbTabContent>
+        <app-edit-venue [chapter]="chapter" [venue]="venue"></app-edit-venue>
+      </ng-template>
+    </ngb-tab>
+    <ngb-tab title="Events">
+      <ng-template ngbTabContent>
+        <app-venue-events [venue]="venue"></app-venue-events>
+      </ng-template>
+    </ngb-tab>
   </ngb-tabset>
 </ng-container>
