--- a/ODK.Website.Angular/src/app/modules/admin/components/venues/venues/venues.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/venues/venues/venues.component.html
@@ -1,23 +1,37 @@
 <h2>Venues</h2>
-<ng-container *ngIf="venues">
+<ng-container *appLoading="!viewModels">
   <p>
-      <a class="btn btn-primary" [routerLink]="links.createVenue">Create</a>
+    <a class="btn btn-primary" [routerLink]="links.createVenue">Create</a>
   </p>
 
   <table class="table table-striped">
-      <thead>
-          <tr>
-              <th>Name</th>
-              <th>Address</th>
-              <th>Map search</th>
-          </tr>
-      </thead>
-      <tbody>
-          <tr *ngFor="let venue of venues">
-              <td><a [routerLink]="getVenueLink(venue)">{{venue.name}}</a></td>
-              <td>{{venue.address}}</td>
-              <td>{{venue.mapQuery}}</td>
-          </tr>
-      </tbody>
+    <thead>
+      <tr>
+        <th>
+          <button class="btn btn-link p-0" (click)="onSort('name')">Name</button>
+        </th>
+        <th>Address</th>
+        <th>
+          <button class="btn btn-link p-0" (click)="onSort('stats.eventCount')">Events</button>
+        </th>
+        <th>
+          <button class="btn btn-link p-0" (click)="onSort('stats.lastEventDate')">Last event</button>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let viewModel of viewModels">
+        <td>
+          <a [routerLink]="getVenueLink(viewModel.venue)">{{viewModel.venue.name}}</a>
+        </td>
+        <td>{{viewModel.venue.address}}</td>
+        <td>{{viewModel.stats.eventCount}}</td>
+        <td>
+          <span *ngIf="viewModel.stats.lastEventDate">
+            {{viewModel.stats.lastEventDate | date:'yyyy-MM-dd'}}
+          </span>
+        </td>
+      </tr>
+    </tbody>
   </table>
 </ng-container>
