--- a/ODK.Website.Angular/src/app/components/events/event/event.component.html
+++ b/ODK.Website.Angular/src/app/components/events/event/event.component.html
@@ -4,7 +4,9 @@
             <h2>{{venue.name}}</h2>
             <h2>{{event.date | date:'fullDate'}}</h2>
             <h3 *ngIf="event.time">{{event.time}}</h3>
-            <app-raw-html *ngIf="event.description" [html]="event.description"></app-raw-html>
+            <div *ngIf="event.description">
+              <app-raw-html [html]="event.description"></app-raw-html>
+            </div>
             <div *ngIf="venue.mapQuery" class="d-none d-md-block">
               <app-google-map [query]="venue.mapQuery"></app-google-map>
             </div>
