--- a/ODK.Website.Angular/src/app/modules/admin/components/venues/edit-venue/edit-venue.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/venues/edit-venue/edit-venue.component.html
@@ -1,3 +1,3 @@
-<app-venue-form *ngIf="venue" buttonText="Update" [chapter]="chapter" [venue]="venue" [formCallback]="formCallback"
+<app-venue-form buttonText="Update" [chapter]="chapter" [venue]="venue" [formCallback]="formCallback"
     (formSubmit)="onFormSubmit($event)">
 </app-venue-form>
