--- a/ODK.Website.Angular/src/app/modules/admin/components/events/event-header/event-header.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/events/event-header/event-header.component.html
@@ -1,7 +1,9 @@
-<div *ngIf="event" class="mb-3">
+<div *ngIf="event">
   <h2>{{event.name}}</h2>
   <h5>{{event.date | date:'fullDate'}}</h5>
-  <h5 *ngIf="venue">{{venue.name}}</h5>
+  <h5 *ngIf="venue"><a [routerLink]="links.venue">{{venue.name}}</a></h5>
 
-  <app-event-menu [event]="event"></app-event-menu>
+  <div class="mt-3">
+    <app-event-menu [event]="event"></app-event-menu>
+  </div>
 </div>
