--- a/ODK.Website.Angular/src/app/modules/admin/components/events/event-invites/event-invites.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/events/event-invites/event-invites.component.html
@@ -1,6 +1,4 @@
-<ng-container *appLoading="!event">
-  <app-event-header [event]="event"></app-event-header>
-
+<ng-container *appLoading="!invites">
   <div *ngIf="sendForm" class="mb-3">
     <app-form [form]="sendForm" (formSubmit)="onSendFormSubmit()">      
     </app-form>
