--- a/ODK.Website.Angular/src/app/modules/shared/components/members/member-list/member-list.component.html
+++ b/ODK.Website.Angular/src/app/modules/shared/components/members/member-list/member-list.component.html
@@ -4,8 +4,8 @@
         [class.col-md-4]="cols === 4" [class.col-3]="cols === 4"
         [class.col-md-2]="cols === 3" [class.col-4]="cols === 3"
         [class.col-lg-3]="cols === 2" [class.col-6]="cols === 2">
-        <app-list-member [size]="size" [link]="getMemberLink(member)" [member]="member" [maxWidth]="150">                
-        </app-list-member>
+      <app-list-member [size]="size" [link]="getMemberLink(member)" [member]="member" [maxWidth]="maxWidth">                
+      </app-list-member>
     </div>
   </div>
 </ng-container>
