--- a/ODK.Website.Angular/src/app/modules/admin/components/events/event-layout/event-layout.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/events/event-layout/event-layout.component.html
@@ -1,4 +1,5 @@
 <ng-container *appLoading="!event">
+  <app-breadcrumbs [breadcrumbs]="breadcrumbs" [active]="event.name"></app-breadcrumbs>
   <app-event-header [event]="event"></app-event-header>
   <router-outlet></router-outlet>
 </ng-container>
