--- a/ODK.Website.Angular/src/app/modules/admin/components/venues/create-venue/create-venue.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/venues/create-venue/create-venue.component.html
@@ -1,3 +1,4 @@
+<app-breadcrumbs [breadcrumbs]="breadcrumbs" active="Create new venue"></app-breadcrumbs>
 <h2>Create new venue</h2>
 <app-venue-form *ngIf="chapter" buttonText="Create" [chapter]="chapter" [formCallback]="formCallback"
     (formSubmit)="onFormSubmit($event)">
