--- a/ODK.Website.Angular/src/app/modules/admin/components/venues/venue-layout/venue-layout.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/venues/venue-layout/venue-layout.component.html
@@ -1,4 +1,5 @@
 <ng-container *appLoading="!venue">
+  <app-breadcrumbs [breadcrumbs]="breadcrumbs" [active]="venue.name"></app-breadcrumbs>
   <h2>{{venue.name}}</h2>
   <app-venue-menu></app-venue-menu>
   <router-outlet></router-outlet>
