--- a/ODK.Website.Angular/src/app/components/account/forgotten-password/forgotten-password.component.html
+++ b/ODK.Website.Angular/src/app/components/account/forgotten-password/forgotten-password.component.html
@@ -14,6 +14,6 @@
     </p>
   </ng-container>
   <div *ngIf="message">
-    <ngb-alert type="success">{{message}}</ngb-alert>
+    <ngb-alert type="success" (close)="onAlertClose()">{{message}}</ngb-alert>
   </div>
 </app-body>
