--- a/ODK.Website.Angular/src/app/modules/forms/components/form-button/form-button.component.html
+++ b/ODK.Website.Angular/src/app/modules/forms/components/form-button/form-button.component.html
@@ -1,5 +1,6 @@
 <button type="submit" class="btn" 
   [class.btn-primary]="!button.type || button.type === 'primary'"
+  [class.btn-secondary]="button.type === 'secondary'"
   [class.btn-danger]="button.type === 'danger'" 
   [class.btn-success]="button.type === 'success'">
   {{button.text}}
