Add email address update

--- a/ODK.Website.Angular/src/app/components/account/profile/profile.component.html
+++ b/ODK.Website.Angular/src/app/components/account/profile/profile.component.html
@@ -13,7 +13,10 @@
           <a [routerLink]="links.changePassword">Change password</a>
         </div>
         <div>
-          <a [routerLink]="links.emails">Emails</a>
+          <a [routerLink]="links.updateEmailAddress">Update email address</a>
+        </div>
+        <div>
+          <a [routerLink]="links.emails">Email opt-in</a>
         </div>
       </div>
 
