--- a/ODK.Website.Angular/src/app/components/account/profile-emails/profile-emails.component.html
+++ b/ODK.Website.Angular/src/app/components/account/profile-emails/profile-emails.component.html
@@ -1,15 +1,15 @@
-<app-body [breadcrumbs]="breadcrumbs">  
-  <ng-container *appLoading="!profile">
-      <p *ngIf="profile.emailOptIn">
-        <ngb-alert type="success" [dismissible]="false">
-          You are currently receiving event emails.
-        </ngb-alert>        
-      </p>
-      <p *ngIf="!profile.emailOptIn">
-        <ngb-alert type="danger" [dismissible]="false">
-          You have chosen not to receive event emails.
-        </ngb-alert>             
-      </p>
-      <app-form *ngIf="form" [form]="form" (formSubmit)="onFormSubmit()"></app-form>
+<app-body [breadcrumbs]="breadcrumbs">
+  <ng-container *appLoading="!form">      
+    <p *ngIf="profile.emailOptIn">
+      <ngb-alert type="success" [dismissible]="false">
+        You are currently receiving event emails.
+      </ngb-alert>        
+    </p>
+    <p *ngIf="!profile.emailOptIn">
+      <ngb-alert type="danger" [dismissible]="false">
+        You have chosen not to receive event emails.
+      </ngb-alert>             
+    </p>
+    <app-form [form]="form" (formSubmit)="onFormSubmit()"></app-form>
   </ng-container>
 </app-body>
