--- a/ODK.Website.Angular/src/app/modules/forms/components/inputs/read-only-form-control/read-only-form-control.component.html
+++ b/ODK.Website.Angular/src/app/modules/forms/components/inputs/read-only-form-control/read-only-form-control.component.html
@@ -1,3 +1,8 @@
 <div *ngIf="viewModel.value" class="form-control-plaintext">
+  <span *ngIf="!controlType">
     {{viewModel.value}}
+  </span>    
+  <a *ngIf="controlType === 'url'" [attr.href]="viewModel.value" target="_blank">
+    {{viewModel.value}}
+  </a>
 </div>
