--- a/ODK.Website.Angular/src/app/components/notifications/notifications/notifications.component.html
+++ b/ODK.Website.Angular/src/app/components/notifications/notifications/notifications.component.html
@@ -1,6 +1,8 @@
 <div *ngIf="notifications.length" class="container">
-    <div *ngFor="let notification of notifications" class="mt-3">
-        <app-notification [notification]="notification" (dismiss)="onDismiss(notification)">
-        </app-notification>
-    </div>
+  <div *ngFor="let notification of notifications; let i = index" class="mt-3">
+    <app-notification [notification]="notification" 
+      [cssClass]="i === notifications.length - 1 ? 'mb-0' : ''"
+      (dismiss)="onDismiss(notification)">
+    </app-notification>
+  </div>
 </div>
