--- a/ODK.Website.Angular/src/app/modules/admin/components/events/event-responses/event-responses.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/events/event-responses/event-responses.component.html
@@ -1,16 +1,16 @@
 <ng-container *appLoading="!going">  
   <div *ngIf="going.length">
     <h5>Going</h5>
-    <app-member-list size="xs" [chapter]="chapter" [members]="going"></app-member-list>
+    <app-member-list size="xs" [chapter]="chapter" [members]="going" [isAdmin]="true"></app-member-list>
   </div>
 
   <div *ngIf="maybe.length">
     <h5>Maybe</h5>
-    <app-member-list size="xs" [chapter]="chapter" [members]="maybe"></app-member-list>
+    <app-member-list size="xs" [chapter]="chapter" [members]="maybe" [isAdmin]="true"></app-member-list>
   </div>
 
   <div *ngIf="declined.length">
     <h5>Declined</h5>
-    <app-member-list size="xs" [chapter]="chapter" [members]="declined"></app-member-list>
+    <app-member-list size="xs" [chapter]="chapter" [members]="declined" [isAdmin]="true"></app-member-list>
   </div>
 </ng-container>
