(style): remove unecessary section padding

--- a/ODK.Website.Angular/src/app/components/structure/body/body.component.html
+++ b/ODK.Website.Angular/src/app/components/structure/body/body.component.html
@@ -2,7 +2,7 @@
   <app-page-title *ngIf="title" [title]="title"></app-page-title>
   <app-subscription-alert></app-subscription-alert>
   <app-notifications></app-notifications>    
-  <section class="section section--main">
+  <section class="section--main">
     <div class="container">
       <app-breadcrumbs [breadcrumbs]="breadcrumbs" [active]="title"></app-breadcrumbs>
       <ng-content></ng-content>
