--- a/ODK.Website.Angular/src/app/components/structure/page-title/page-title.component.html
+++ b/ODK.Website.Angular/src/app/components/structure/page-title/page-title.component.html
@@ -1,4 +1,4 @@
-<section class="section section--header">
+<section class="section--header">
     <div class="container">
         <h1>{{title}}</h1>
     </div>
