--- a/ODK.Website.Angular/src/app/modules/admin/components/admin/admin.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/admin/admin.component.html
@@ -1,5 +1,5 @@
 <app-admin-menu></app-admin-menu>
-<section class="section section--main">
+<section class="section--main">
     <div class="container">
         <router-outlet></router-outlet>
     </div>
