--- a/ODK.Website.Angular/src/css/_sections.scss
+++ b/ODK.Website.Angular/src/css/_sections.scss
@@ -1,50 +1,47 @@
-.section {
-    padding: 90px 20px;
-}
-
 .section--main {
-	padding-top: 30px;
+  padding-top: 30px;
+  padding-bottom: 90px;
 }
 
 .section--header,
 .section--footer {
-    padding: 1rem 0;
+  padding: 1rem 0;
 }
 
 .section--header h1 {
-    font-size: 2rem;
+  font-size: 2rem;
 	margin-bottom: 0;
 }
 
 .section--hero {
 	background-position-y: 0;
-    padding: 50px 20px;
-    
-    align-items: center;
-    text-align: center;
-    display: flex;
-    justify-content: center;
+  padding: 50px 20px;
+  
+  align-items: center;
+  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .section--hero__content {
 	font-size: 1.4rem;
-    max-width: 760px;
+  max-width: 760px;
     
-    h1 {
-        font-size: 3rem;
+  h1 {
+    font-size: 3rem;
+
+    &:not(:first-child) {
+      margin-top: 4rem;
     }
-    
-    h1:not(:first-child) {
-        margin-top: 4rem;
-    }
+  }    
 }
 
 .section--dark {
-    background: rgba(37,33,33,.6);
+  background: rgba(37,33,33,.6);
 }
 
 .section--light {
-    background: hsla(0,0%,88%,.6);
+  background: hsla(0,0%,88%,.6);
 }
 
 .section--dark .section--hero__content {
