(members): remove member image endpoint authorization for perf

--- a/ODK.Website.Angular/src/app/components/account/profile-picture/profile-picture.component.html
+++ b/ODK.Website.Angular/src/app/components/account/profile-picture/profile-picture.component.html
@@ -1,7 +1,8 @@
 <div class="d-inline-block">
-  <img *ngIf="imageData" [attr.src]="imageData" />
+  <img *ngIf="imageUrl" [attr.src]="imageUrl" />
   <div class="d-flex justify-content-center">
-    <input type="file" accept="image/*" #file placeholder="Choose file" (change)="onUploadPicture(file.files)" class="d-none" />
+    <input type="file" accept="image/*" #file placeholder="Choose file" class="d-none"
+      (change)="onUploadPicture(file.files)" />
     <div>
       <button class="btn btn-link" (click)="file.click()">Change picture</button>
       <button class="btn-icon" ngbTooltip="Rotate right" (click)="onRotate()">
