--- a/ODK.Website.Angular/src/app/components/members/members/members.component.html
+++ b/ODK.Website.Angular/src/app/components/members/members/members.component.html
@@ -1,3 +1,4 @@
 <app-body *appLoading="!members">
-  <app-member-list [chapter]="chapter" [members]="members" [cols]="3"></app-member-list>
+  <app-member-list [chapter]="chapter" [members]="members" [cols]="3">
+  </app-member-list>
 </app-body>
