--- a/ODK.Website.Angular/src/app/modules/shared/components/members/member-image/member-image.component.html
+++ b/ODK.Website.Angular/src/app/modules/shared/components/members/member-image/member-image.component.html
@@ -1,6 +1,8 @@
-<ng-container *appLoading="loading">
-    <span *ngIf="image" [style.max-width.px]="maxWidth" class="d-inline-block">
-      <img *ngIf="image" [class.card-img]="!isTop" [class.card-img-top]="isTop" 
-        [attr.src]="image" [attr.alt]="'Photo of ' + member.fullName" />
-    </span>    
-</ng-container>
+<div class="overlay-container">
+  <app-loading-spinner *ngIf="loading" [options]="loadingOptions"></app-loading-spinner>
+  <span [style.max-width.px]="maxWidth" class="d-inline-block">
+    <img [class.card-img]="!isTop" [class.card-img-top]="isTop" 
+      [attr.src]="imageUrl" [attr.alt]="'Photo of ' + member.fullName" 
+      (load)="onLoad()" />
+  </span>    
+</div>
