--- a/ODK.Website.Angular/src/app/components/account/change-password/change-password.component.html
+++ b/ODK.Website.Angular/src/app/components/account/change-password/change-password.component.html
@@ -1,4 +1,3 @@
 <app-body [breadcrumbs]="breadcrumbs">
-    <app-form [form]="form" (formSubmit)="onFormSubmit()">
-    </app-form>
+  <app-form [form]="form" (formSubmit)="onFormSubmit()"></app-form>
 </app-body>
