(account): reset password alert colour

--- a/ODK.Website.Angular/src/app/components/account/reset-password/reset-password.component.html
+++ b/ODK.Website.Angular/src/app/components/account/reset-password/reset-password.component.html
@@ -1,5 +1,5 @@
 <app-body>
-  <ngb-alert *ngIf="updated" [dismissible]="false">
+  <ngb-alert *ngIf="updated" type="success" [dismissible]="false">
     Your password has been updated. <a [routerLink]="links.login">Login</a>
   </ngb-alert>
   <app-form *ngIf="form" [form]="form" (formSubmit)="onFormSubmit()"></app-form>
