(account): allow users to delete their account

--- a/ODK.Website.Angular/src/app/components/account/profile/profile.component.html
+++ b/ODK.Website.Angular/src/app/components/account/profile/profile.component.html
@@ -18,6 +18,9 @@
         <div>
           <a [routerLink]="links.emails">Email opt-in</a>
         </div>
+        <div>
+          <a [routerLink]="links.delete">Delete my account</a>
+        </div>
       </div>
 
       <div class="col-6">
