--- a/ODK.Website.Angular/src/css/_forms.scss
+++ b/ODK.Website.Angular/src/css/_forms.scss
@@ -3,10 +3,11 @@
 }
 
 .form-group.required {
-	.form-control-label:after {
+  .form-control-label:after,
+  .form-check-label:after {
 		content: " *";
 		color: $danger;
-	}
+  }  
 }
 
 .form-control-custom {
