experiment with header refactor

--- a/ODK.Website.Angular/src/app/components/structure/home-header/home-header.component.html
+++ b/ODK.Website.Angular/src/app/components/structure/home-header/home-header.component.html
@@ -1,3 +1,8 @@
-<app-header imageLink="/" imageUrl="/assets/img/home-banner.png">
+<app-header>
+  <div class="bg-dark text-center d-none d-lg-block">
+    <app-header-brand></app-header-brand>
+  </div>
+  <div>
     <app-home-menu></app-home-menu>
+  </div>
 </app-header>
