--- a/ODK.Website.Angular/src/app/modules/shared/components/elements/navbar/navbar.component.html
+++ b/ODK.Website.Angular/src/app/modules/shared/components/elements/navbar/navbar.component.html
@@ -5,7 +5,7 @@
       <button class="navbar-toggler" type="button" (click)="collapsed = !collapsed">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div [ngbCollapse]="collapsed" class="collapse navbar-collapse flex-column">
+      <div [ngbCollapse]="collapsed" class="collapse navbar-collapse flex-column">        
         <ul *ngFor="let group of groups" class="navbar-nav">
           <li *ngFor="let menuItem of group" class="nav-item">
             <a *ngIf="menuItem.link" class="nav-link" 
@@ -21,6 +21,9 @@
           </li>
         </ul>
       </div>
+      
+      <ng-content></ng-content>
+
       <div class="nav-account-menu">
         <app-account-menu></app-account-menu>
       </div>
