--- a/ODK.Website.Angular/src/app/modules/admin/components/forms/inputs/html-editor-form-control/html-editor-form-control.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/forms/inputs/html-editor-form-control/html-editor-form-control.component.html
@@ -1,5 +1,19 @@
-<div [formGroup]="formGroup" class="form-control form-control-custom" [class.is-invalid]="isInvalid" [class.is-valid]="isValid">
-  <ckeditor [editor]="Editor" [id]="viewModel.id" [formControlName]="viewModel.id" [required]="required"
+<div [formGroup]="formGroup" class="form-control form-control-custom" 
+  [class.is-invalid]="isInvalid" [class.is-valid]="isValid">
+  <ckeditor *ngIf="!sourceMode" [editor]="Editor" [id]="viewModel.id" [formControlName]="viewModel.id" [required]="required"
     (change)="onChange()">
-  </ckeditor>
+  </ckeditor>  
+
+  <textarea *ngIf="sourceMode" [attr.rows]="15"
+      [attr.required]="required ? 'required' : null"
+      class="form-control"
+      [id]="viewModel.id" [name]="viewModel.id" [formControlName]="viewModel.id"
+      (blur)="onValidate()">
+  </textarea>
+
+  <div>
+    <button class="btn btn-link" type="button" (click)="onToggleMode()">
+      {{sourceMode ? 'Hide source' : 'View source'}}
+    </button>
+  </div>
 </div>
