--- a/ODK.Website.Angular/src/app/modules/admin/components/events/event-invites/event-invites.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/events/event-invites/event-invites.component.html
@@ -1,4 +1,5 @@
 <ng-container *appLoading="!invites">
+
   <div *ngIf="sendForm" class="mb-3">
     <app-form [form]="sendForm" (formSubmit)="onSendFormSubmit()">      
     </app-form>
@@ -6,9 +7,13 @@
 
   <div *ngIf="sendTestForm" class="mb-3">
     <app-form [form]="sendTestForm" (formSubmit)="onSendTestFormSubmit()">      
-    </app-form>
+    </app-form>    
   </div>  
   
+  <ngb-alert *ngIf="sent" type="success" (close)="onSentAlertClose()">
+    Email sent
+  </ngb-alert>
+
   <ng-container *ngIf="invites.sentDate">
     <p>
       {{invites.sent}} invites were sent on {{invites.sentDate | date:'fullDate' }}
