--- a/ODK.Website.Angular/src/app/modules/admin/components/members/member-subscription/member-subscription.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/members/member-subscription/member-subscription.component.html
@@ -1,1 +1,7 @@
-<app-form *appLoading="!form" [form]="form" (formSubmit)="onFormSubmit()"></app-form>
+<app-form *appLoading="!form" [form]="form" (formSubmit)="onFormSubmit()">
+  <div app-button-row>
+    <button class="btn btn-danger ml-1" type="button" (click)="onDeleteMember()">
+      Delete
+    </button>
+  </div>
+</app-form>
