--- a/ODK.Website.Angular/src/app/modules/forms/components/form/form.component.html
+++ b/ODK.Website.Angular/src/app/modules/forms/components/form/form.component.html
@@ -1,3 +1,6 @@
+<ngb-alert *ngIf="successMessage" type="success" (close)="onSuccessMessageClose()">
+  {{successMessage}}
+</ngb-alert>
 <form *ngIf="form" (ngSubmit)="onSubmit()" [class.was-validated]="state.validated" novalidate>
   <fieldset [attr.disabled]="submitting ? 'disabled' : null" class="overlay-container">
     <app-loading-spinner *ngIf="submitting" [options]="loadingOptions">      
