(member admin): filter members by name

--- a/ODK.Website.Angular/src/app/modules/admin/components/members/member-filter/member-filter.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/members/member-filter/member-filter.component.html
@@ -1,2 +1,3 @@
-<app-drop-down-multi controlId="type" [label]="typeLabel" [options]="typeOptions" (change)="onTypeChange($event)">
-</app-drop-down-multi>
+<ng-container *ngIf="viewModel">
+  <app-form [form]="form" (formChange)="onFormChange()" (formSubmit)="onFormSubmit()"></app-form>
+</ng-container>
