--- a/ODK.Website.Angular/src/css/_forms.scss
+++ b/ODK.Website.Angular/src/css/_forms.scss
@@ -1,3 +1,17 @@
+.form-inline {
+  app-form-control {
+    display: inline-block;
+  }
+
+  .form-group {
+    margin-right: 1rem;
+  }
+  
+  .form-control-label {
+    margin-right: 0.5rem;
+  }
+}
+
 .form-control-label {
 	font-weight: 700;
 }
