--- a/ODK.Website.Angular/src/app/components/social-media/social-media-image-list/social-media-image-list.component.html
+++ b/ODK.Website.Angular/src/app/components/social-media/social-media-image-list/social-media-image-list.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="images">
-  <div  class="row no-gutters">
-    <div *ngFor="let image of images" class="col-lg-3 col-6">
+  <div  class="row row-cols-2 row-cols-lg-4 no-gutters">
+    <div *ngFor="let image of images" class="col">
       <div class="social-media-image-tile">
         <a [attr.href]="image.url" target="_blank">
           <img [src]="image.imageUrl" />
