--- a/ODK.Website.Angular/src/app/components/structure/footer/footer.component.html
+++ b/ODK.Website.Angular/src/app/components/structure/footer/footer.component.html
@@ -1,18 +1,16 @@
 <footer>
   <section class="section--footer bg-light">
     <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="row">
-            <div class="col-md-12">
-              <a [routerLink]="links.home">Knitwits International Home</a>
-            </div>
-            <div class="col-md-12">
-              <a [routerLink]="links.privacy">Privacy</a>
-            </div>
+      <div class="row row-cols-1 row-cols-md-2">
+        <div class="col container">
+          <div>
+            <a [routerLink]="links.home">Knitwits International Home</a>            
           </div>                    
+          <div>
+            <a [routerLink]="links.privacy">Privacy</a>
+          </div>
         </div>
-        <div class="col-md-6">        
+        <div class="col">        
           <ng-content></ng-content>
         </div>
       </div>
