--- a/ODK.Website.Angular/src/app/modules/shared/components/members/member-list/member-list.component.html
+++ b/ODK.Website.Angular/src/app/modules/shared/components/members/member-list/member-list.component.html
@@ -1,9 +1,9 @@
 <ng-container *appLoading="!members">
-  <div class="row no-gutters">        
-    <div *ngFor="let member of members"
-        [class.col-md-4]="cols === 4" [class.col-3]="cols === 4"
-        [class.col-md-2]="cols === 3" [class.col-4]="cols === 3"
-        [class.col-lg-3]="cols === 2" [class.col-6]="cols === 2">
+  <div class="row no-gutters"
+    [class.row-cols-md-3]="cols === 4" [class.row-cols-4]="cols === 4"
+    [class.row-cols-md-6]="cols === 3" [class.row-cols-3]="cols === 3"
+    [class.row-cols-lg-4]="cols === 2" [class.row-cols-2]="cols === 2">        
+    <div *ngFor="let member of members" [class.col]="cols > 0">
       <app-list-member [size]="size" [link]="getMemberLink(member)" [member]="member" [maxWidth]="maxWidth">                
       </app-list-member>
     </div>
