--- a/ODK.Deploy/ODK.Deploy.Web.Mvc/Views/Home/Index.cshtml
+++ b/ODK.Deploy/ODK.Deploy.Web.Mvc/Views/Home/Index.cshtml
@@ -10,33 +10,42 @@
         <tr>
             <th>Name</th>
             <th>Remote path</th>
+            <th>Last upload</th>
             <th>Actions</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var deployment in Model.Deployments)
         {
-            <tr>
-                <td>@deployment.Name</td>
-                <td>@deployment.RemotePath</td>
-                <td>
-                    <div class="d-flex">
-                        @using (Html.BeginForm("Backup", null, FormMethod.Post))
-                        {
-                            <input type="hidden" name="id" value="@deployment.Id" />
-                            <input type="hidden" name="path" value="@Model.Path" />
-                            <button class="btn btn-sm btn-primary">Backup</button>
-                        }
+        <tr>
+            <td>@deployment.Name</td>
+            <td>@deployment.RemotePath</td>
+            <td>@deployment.LastUpload</td>
+            <td>
+                <div class="d-flex">
+                    @using (Html.BeginForm("Backup", null, FormMethod.Post))
+                    {
+                        <input type="hidden" name="id" value="@deployment.Id" />
+                        <input type="hidden" name="path" value="@Model.Path" />
+                        <button class="btn btn-sm btn-primary">Backup</button>
+                    }
 
-                        @using (Html.BeginForm("Upload", null, FormMethod.Post))
-                        {
-                            <input type="hidden" name="id" value="@deployment.Id" />
-                            <input type="hidden" name="path" value="@Model.Path" />
-                            <button class="btn btn-sm btn-primary">Upload</button>
-                        }
-                    </div>
-                </td>
-            </tr>
+                    @using (Html.BeginForm("Upload", null, FormMethod.Post))
+                    {
+                        <input type="hidden" name="id" value="@deployment.Id" />
+                        <input type="hidden" name="path" value="@Model.Path" />
+                        <button class="btn btn-sm btn-primary">Upload</button>
+                    }
+
+                    @using (Html.BeginForm("Release", null, FormMethod.Post))
+                    {
+                        <input type="hidden" name="id" value="@deployment.Id" />
+                        <input type="hidden" name="path" value="@Model.Path" />
+                        <button class="btn btn-sm btn-primary">Release</button>
+                    }
+                </div>
+            </td>
+        </tr>
         }
     </tbody>
 </table>
